reduced font size for coordinates box to prevent overflow onto check in buttons

--- a/client/src/components/Map/style.css
+++ b/client/src/components/Map/style.css
@@ -26,6 +26,7 @@
         padding: 6px;
         font-weight: bold;
         opacity: 50%;
+        font-size: 14px;
         }
 
 .mapboxgl-papup {
